--- a/spring-boot-app-manifests/ingress-ressource.yaml
+++ b/spring-boot-app-manifests/ingress-ressource.yaml
@@ -1,17 +1,16 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: example-ingress
 spec:
   rules:
-  - host: devopstn.com
+    - host: devopstn.com
   http:
-    path:
-    - pathType: Prefix
-     path: /haykel
-     backend:
-       service:
-         name: servicenew
-         port:
-           number:3333
-    
+    paths:
+      - pathType: Prefix
+    path: /haykel
+    backend:
+      service:
+        name: servicenew
+        port: number:3333
