--- a/spring-boot-app-manifests/ingress-ressource.yaml
+++ b/spring-boot-app-manifests/ingress-ressource.yaml
@@ -5,7 +5,7 @@ metadata:
   name: example-ingress
 spec:
   rules:
-    - host: devopstn.com
+    - host: "devopstn.com"
   http:
     paths:
       - pathType: Prefix
