--- a/spring-boot-app-manifests/ingress-ressource.yaml
+++ b/spring-boot-app-manifests/ingress-ressource.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -8,9 +7,10 @@ spec:
   - host: "devopstn.com"
     http:
       paths:
-        path: /haykel
+      - path: /haykel
+        pathType: Prefix
         backend:
           service:
             name: servicenew
-            port: 
-              number:3333
+            port:
+              number: 3333
