--- a/spring-boot-app-manifests/servicenew.yml
+++ b/spring-boot-app-manifests/servicenew.yml
@@ -3,7 +3,9 @@ kind: Service
 metadata:
   name: hayhay
 spec:
- 
+  type: ClusterIP
+  ports:
+  - name: http
   ports:
   - name: http
     port: 80
