--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -4,7 +4,7 @@ metadata:
   name: example-ingress
 spec:
   rules:
-  - host: "devopstn.com"
+  - host: devopstn.com
     http:
       paths:
       - path: /
