--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -11,6 +11,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: hayhay
+            name: spring-boot-app-service
             port:
-              number: 8085
+              number: 8080
