--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -7,10 +7,10 @@ spec:
   - host: devopstn.com
     http:
       paths:
-      - path: /
+      - path:
         pathType: Prefix
         backend:
           service:
-            name: spring-boot-app-service
+            name: hayhay
             port:
               number: 8080
