--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-boot-app
+  name: spring-hay
   labels:
-    app: spring-boot-app
+    app: spring-hay
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: spring-boot-app
+      app: spring-hay
   template:
     metadata:
       labels:
-        app: spring-boot-app
+        app: spring-hay
     spec:
       containers:
       - name: spring-boot-app
