--- a/spring-boot-app-manifests/servicenew.yml
+++ b/spring-boot-app-manifests/servicenew.yml
@@ -3,14 +3,14 @@ kind: Service
 metadata:
   name: hayhay
 spec:
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 808
-    
-      nodeport: 30080
-  selector:
-    app: spring-hay
+  
   type: NodePort
+  ports:
+  - name: http
+    port: 80
+    targetPort: 8080
+    protocol: TCP
+  selector:
+    app: spring-boot-app
 
     
