--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -1,22 +1,13 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: spring-boot-app-ingress
+ingress:
+  enabled: true
   annotations:
+    # Add any annotations you need for your Ingress controller
     nginx.ingress.kubernetes.io/rewrite-target: /
-spec:
-  rules:
-  - host: devopstn.com
-    http:
+  hosts:
+    - host: devopstn.com
       paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: spring-boot-app-service
-            port:
-              number: 80
-status:
-  loadBalancer:
-    ingress:
-    - ip: 10.254.254.4
+        - /
+  pathType: Prefix
+  service:
+    name: spring-boot-app-service
+    port: 80
