--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: 51.91.204.153
+  - host: devopstn.tn
     http:
       paths: 
       - path: /
