--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: haykel
   
 spec:
-  ingressClassName: nginx
+  ingressClassName: haproxy
   rules:
   - host: devopstn.tn
     http:
