--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -3,9 +3,11 @@ kind: Ingress
 metadata:
   name: spring-hay
   namespace: haykel
+  annotations:
+      ingress.class: "haproxy"
   
 spec:
-  ingressClassName: haproxy
+  
   rules:
   - host: devopstn.tn
     http:
@@ -16,4 +18,4 @@ spec:
           service:
             name: spring-boot-app-service
             port:
-              number: 8080
+              number: 80
