--- a/spring-boot-app-manifests/service.yml
+++ b/spring-boot-app-manifests/service.yml
@@ -11,3 +11,8 @@ spec:
     protocol: TCP
   selector:
     app: spring-hay
+  type: LoadBalancer
+status:
+  loadBalancer:
+    ingress:
+    - ip: 51.91.204.153
