--- a/spring-boot-app-manifests/ingress-ressource.yml
+++ b/spring-boot-app-manifests/ingress-ressource.yml
@@ -11,7 +11,7 @@ spec:
   - host: devopstn.com
     http:
       paths: 
-      - path: /hay
+      - path: /
         pathType: Prefix
         backend:
           service:
